Messages: currently not compiling, but will be shortly. Database works.

--- a/Messages/res/values/strings.xml
+++ b/Messages/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Messages</string>
+    <string name="new_message">New Text Message</string>
 </resources>
