Messages: this commit has a lot of stuff in it. Very rough copy of the app, still needs lots of work but it is certainly a pleasure to use. :)

--- a/Messages/res/values/strings.xml
+++ b/Messages/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Messages</string>
     <string name="new_message">New Text Message</string>
+    <string name="conversations">Conversations</string>
 </resources>
