--- a/trunk/Messages/res/values/strings.xml
+++ b/trunk/Messages/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Messages</string>
     <string name="new_message">New Text Message</string>
+    <string name="conversations">Conversations</string>
 </resources>
