--- a/wiki/Messages.wiki
+++ b/wiki/Messages.wiki
@@ -2,7 +2,11 @@
 
 = Introduction =
 
-This is a conversation threaded messaging application for android. This application handles all sms actions on the phone including those coming from the contacts application. Below are some screenshots of the application. Download will be available shortly.
+This is a conversation threaded messaging application for android. This application handles all sms actions on the phone including those coming from the contacts application. Below are some screenshots of the application.
+
+= Download =
+
+Visit the Downloads page to get the 0.0.1 version of this application.
 
 
 = Screenshots =
