Solitaire: Reorganized to include a manager activity, allowing game rules to be better encapsulated.

--- a/Solitaire/res/values/strings.xml
+++ b/Solitaire/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Solitaire</string>
     <string name="klondike">Klondike</string>
+	 <string name="freecell">Freecell</string>
 </resources>
